Conformance issues (post and patch)